# hw_web_13_api

./: .env  Dockerfile  README.md  docker-compose.yml  patch_pydantic.py  pyproject.toml  requirements.txt
app/: auth.py  config.py  crud.py  db.py  main.py  models.py  password_reset.py  schemas.py  settings.py
